--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <h> Odin Recipes <br></h>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    
+    <p>Main Course</p>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <p>Sandwiches</p>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <p>Desserts</p>
+    <a href="recipes/lasagna.html">Lasagna Recipe</a>
 </body>
 </html>
