--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,7 @@
     <img src="images/lasagna.jpg" float:left; width="250" height="300">
 <h2>Description</h2>
 <p>a comforting and versatile dish, can be customized to endless preferences.<br> But its core lies in layering cooked pasta sheets with savory sauces and creamy cheeses.</p>
+<!-- ingredients  -->
 <h3>Ingredients</h3>
 <ul>
 <li>1 lb ground beef, (15-20% fat content)</li>
@@ -23,18 +24,48 @@
 <li>1/4 tsp dried thyme</li>
 <li>1/2 tsp granulated sugar</li>
 <li>2 Tbsp parsley, finely chopped</li>
-<li>9 lasagna noodles, cooked al dente</li>
+<li>9 lasagna noodles, cooked al-dante</li>
 </ul>
-Ingredients for Cheese Sauce:
+<h4>Ingredients for Cheese Sauce:</h4>
 <ul>
     <li>16 oz low-fat cottage cheese</li>
 <li>15 oz reduced fat ricotta cheese</li>
 <li>1 large egg</li>
 <li>2 Tbsp parsley, finely chopped, plus more to garnish</li>
 <li>4 cups mozzarella cheese, shredded, divided</li>
-
 </ul>
+<h3>Instructions</h3>
+<!-- Making the meat sauce -->
+<h4> Preparing the Meat sauce</h4>
+<ol>
+<li>Place a deep pan or dutch oven over medium/high heat and add 1 Tbsp olive oil, 1 lb ground beef and diced onion.<br> 
+Saute, breaking up the meat, for 5 minutes or until beef is no longer pink. Add pressed garlic and sauté another minute 
+until fragrant</li>
+<li>Add 3 cups marinara, 1/2 tsp salt, 1/4 tsp pepper, 1/4 tsp thyme, 1/2 tsp sugar and 2 Tbsp parsley. Bring to a simmer<br>
+ then cover and cook 5 minutes. </li>
+</ol>
+<!-- Making the cheese sauce -->
+<h4>Preparing the Cheese sauce</h4>
+<p>In a large mixing bowl, combine:
+    <ul> 
+        <li>16 oz Cottage Cheese</li> 
+        <li>15 oz Ricotta</li>
+        <li>1 cup mozzarella</li>
+        <li>1 egg</li>
+        <li>2 Tbsp parsley</li>
+    </ul> Mix well.</p>
+<!-- making lasagna -->
+<h4>Preparing Lasagna</h4>
+<p>To prepare the <i><u>perfect</u></i> Lasagna:</p>
+<ol>
+    <li>Preheat oven to 375˚F. Bring a large pot of water to a boil. Add salt and 9 lasagna noodles. Cook until al dente according to package instructions.</li>
+    <li>Spread 1/2 cup meat sauce in the bottom of a deep 9×13 casserole dish. Add 3 noodles, spread on 1/3 of the meat sauce, and sprinkle with 1 cup mozzarella cheese.
+        <br> Spoon on and spread the top with 1/2 of your cheese sauce. </li>
+    <li>Repeat until you have 3 layers of noodles: Add 3 noodles, 1/3 meat sauce, 1 cup mozzarella cheese, 1/2 cheese sauce, Add 3 noodles, remaining 1/3 meat sauce,<br>
+        remaining 1 cup mozzarella.</li>
+    <li>Poke 9-12 toothpicks over the surface of your lasagna (to keep the foil from sticking to the cheese). Cover with foil and bake at 375˚F for 45 minutes.</li>
+    <li>Remove foil and broil for 3 to 5 minutes, or until cheese turns golden. Let lasagna rest 30 min before slicing. </li>
+</ol>
 
-    
 </body>
 </html>
