initialized chicken fried rice page

--- a/Pages/Recipes/lasagna.html
+++ b/Pages/Recipes/lasagna.html
@@ -6,6 +6,7 @@
     <title>Lasagna</title>
 </head>
 <body>
+    <!-- <a href="Pages">back</a> cant create a back button/link as index.html is not in the same folder -->
     <h1>Lasagna Recipe</h1>
     <img src="images/lasagna.jpg" float:left; width="250" height="300">
 <h2>Description</h2>
