--- a/Pages/index.html
+++ b/Pages/index.html
@@ -9,7 +9,7 @@
     <h> Odin Recipes <br></h>
     <p>Main Course</p>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/chicken_fried_rice.html">Chicken fried Rice Recipe</a>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
     <p>Sandwiches</p>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
