--- a/Pages/Recipes/chicken_fried_rice.html
+++ b/Pages/Recipes/chicken_fried_rice.html
@@ -14,59 +14,36 @@
 <!-- ingredients  -->
 <h3>Ingredients</h3>
 <ul>
-<li>1 lb ground beef, (15-20% fat content)</li>
-<li>1 medium onion, finely diced</li>
-<li>2 large garlic cloves, minced</li>
-<li>1/4 cup dry red wine, or beef broth</li>
-<li>1 Tbsp olive oil</li>
-<li>24 oz Marinara Sauce , (3 cups)</li>
+<li>1 lb chicken thighs, boneless, skinless and trimmed</li>
 <li>1/2 tsp sea salt</li>
+<li>1/4 tsp black pepper</li>
+<li>3 Tbsp extra light olive oil, or high heat cooking oil</li>
+<li>4 large eggs</li>
+<li>5 cups cooked white rice, chilled</li>
+<li>2 Tbsp soy sauce, (or GF Tamari) added to taste</li>
 <li>1/4 tsp black pepper, ground</li>
-<li>1/4 tsp dried thyme</li>
-<li>1/2 tsp granulated sugar</li>
-<li>2 Tbsp parsley, finely chopped</li>
-<li>9 lasagna noodles, cooked al-dante</li>
-</ul>
-<h4>Ingredients for Cheese Sauce:</h4>
-<ul>
-    <li>16 oz low-fat cottage cheese</li>
-<li>15 oz reduced fat ricotta cheese</li>
-<li>1 large egg</li>
-<li>2 Tbsp parsley, finely chopped, plus more to garnish</li>
-<li>4 cups mozzarella cheese, shredded, divided</li>
+<li>1 1/2 tsp sesame oil, or to taste</li>
+<li>1/4 cup green onion, chopped</li>
+<li>12 oz frozen peas and carrots, fully thawed</li>
+
 </ul>
 <h3>Instructions</h3>
-<!-- Making the meat sauce -->
-<h4> Preparing the Meat sauce</h4>
+<!--  -->
 <ol>
-<li>Place a deep pan or dutch oven over medium/high heat and add 1 Tbsp olive oil, 1 lb ground beef and diced onion.<br> 
-Saute, breaking up the meat, for 5 minutes or until beef is no longer pink. Add pressed garlic and sauté another minute 
-until fragrant</li>
-<li>Add 3 cups marinara, 1/2 tsp salt, 1/4 tsp pepper, 1/4 tsp thyme, 1/2 tsp sugar and 2 Tbsp parsley. Bring to a simmer<br>
- then cover and cook 5 minutes. </li>
-</ol>
-<!-- Making the cheese sauce -->
-<h4>Preparing the Cheese sauce</h4>
-<p>In a large mixing bowl, combine:
-    <ul> 
-        <li>16 oz Cottage Cheese</li> 
-        <li>15 oz Ricotta</li>
-        <li>1 cup mozzarella</li>
-        <li>1 egg</li>
-        <li>2 Tbsp parsley</li>
-    </ul> Mix well.</p>
-<!-- making lasagna -->
-<h4>Preparing Lasagna</h4>
-<p>To prepare the <i><u>perfect</u></i> Lasagna:</p>
-<ol>
-    <li>Preheat oven to 375˚F. Bring a large pot of water to a boil. Add salt and 9 lasagna noodles. Cook until al dente according to package instructions.</li>
-    <li>Spread 1/2 cup meat sauce in the bottom of a deep 9×13 casserole dish. Add 3 noodles, spread on 1/3 of the meat sauce, and sprinkle with 1 cup mozzarella cheese.
-        <br> Spoon on and spread the top with 1/2 of your cheese sauce. </li>
-    <li>Repeat until you have 3 layers of noodles: Add 3 noodles, 1/3 meat sauce, 1 cup mozzarella cheese, 1/2 cheese sauce, Add 3 noodles, remaining 1/3 meat sauce,<br>
-        remaining 1 cup mozzarella.</li>
-    <li>Poke 9-12 toothpicks over the surface of your lasagna (to keep the foil from sticking to the cheese). Cover with foil and bake at 375˚F for 45 minutes.</li>
-    <li>Remove foil and broil for 3 to 5 minutes, or until cheese turns golden. Let lasagna rest 30 min before slicing. </li>
-</ol>
+<li>Prep all ingredients before starting the stove. Trim off excess fat and cut chicken thighs into bite-size pieces.<br>
+ Transfer to a bowl and season with 1/2 tsp salt and 1/4 tsp black pepper. In a separate bowl, beat together 4 eggs.</li>
+<li>Bring a large non-stick skillet or wok over medium/high heat and add 1 Tbsp oil. Add chicken and cook for 4-5 minutes,<br>
+ stirring occasionally, or until fully cooked through. Transfer to a plate. </li>
+<li>Reduce heat to medium. Add 1 Tbsp oil then scrambled eggs and stir and scramble for a minute, breaking up the egg with your spatula.<br>
+ Cook just until no longer wet and immediately transfer to the plate with chicken.</li> 
+<li>Use tongs to wipe skillet clean with a paper towel. Swirl in another 1 Tbsp oil then spread 5 cups rice evenly over the pan.<br>
+ Cook 1 to 2 minutes without disturbing then stir and sauté another 1 to 2 minutes. Rice should sizzle.</li>
+<li>Drizzle 2 Tbsp soy sauce and 1 1/2 tsp sesame oil over the rice and stir well. Add fully thawed vegetables and mix well.</li>
+<li>Add cooked chicken and scrambled eggs back to the pan. Add 1/4 cup green onion and mix well. Continue to cook until veggies and rice are <br>
+ hot and rice sizzles, stirring frequently. Add more soy sauce and sesame oil to taste.</li>
+
+</ol> 
+    
 
 </body>
 </html>
