--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 <body>
     <h> Odin Recipes <br></h>
     <p>Main Course</p>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="recipes/chicken_fried_rice.html">Chicken fried Rice Recipe</a>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <p>Sandwiches</p>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <p>Desserts</p>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="./Recipes/lasagna.html">Lasagna Recipe</a><br>
+    <a href="./Recipes/chicken_fried_rice.html">Chicken fried Rice Recipe</a>
+   
 </body>
 </html>
