--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <h> Odin Recipes <br></h>
     <p>Main Course</p>
-    <a href="./Recipes/lasagna.html">Lasagna Recipe</a><br>
-    <a href="./Recipes/chicken_fried_rice.html">Chicken fried Rice Recipe</a>
+    <a href="./Recipes/lasagna.html">Lasagna Recipe </a>
+        <br>
+    <a href="./Recipes/chicken_fried_rice.html"> Chicken fried Rice Recipe</a>
    
 </body>
 </html>
